# nova

./: .env  Cargo.toml  README.md  docker-compose.yml  test_api.rest
entity/src/: follower.rs  lib.rs  mod.rs  post.rs  post_like.rs  prelude.rs  role.rs  session.rs  subscriber.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
src/: db.rs  errors.rs  filters.rs  handlers.rs  jwt.rs  main.rs  routes.rs
src/errors/: db.rs
src/filters/: auth.rs  posts.rs  users.rs
src/handlers/: auth.rs  post.rs  users.rs
src/models/: role.rs  user.rs
src/requests/: auth.rs
src/requests/post/: create.rs
