[package]
name = "nova"
version = "0.1.0"
edition = "2021"
authors = ["commanderxa <art.ostrikov@gmail.com>"]
publish = false
readme = "README.md"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

# server
warp = { version = "0.3.3", features = ["tokio-rustls", "tls"] }
jsonwebtoken = "8.2.0"

# async
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"

# utils
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.8"
env_logger = "0.10.0"
thiserror = "1.0.39"
dotenv = "0.15.0"

[dependencies.sea-orm]
version = "^0.11.0"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
]
